--- a/about.html
+++ b/about.html
@@ -1,1 +1,40 @@
+<!DOCTYPE html>
+
+<body>
+    <header>
+        <h1>À Propos de Moi</h1>
+        <nav>
+            <a href="index.html">Accueil</a>
+            <a href="services.html">Services</a>
+            <a href="contact.html">Contact</a>
+        </nav>
+    </header>
+    <main>
+        <section>
+            <h2>Mon Parcours</h2>
+            <p>Licence en gestion et Master I en finance et comptabilité de l'Université Andrainjato Fianarantsoa.</p>
+            <p>En tant qu'assistant virtuel, je suis déterminé à aider les entrepreneurs à atteindre leurs objectifs en leur fournissant des services comptables et de gestion administrative fiables et efficaces. Avec une solide expérience dans le domaine de la comptabilité et une passion pour l'optimisation des processus, je m'engage à offrir des solutions sur mesure pour répondre aux besoins spécifiques de chaque client.</p>
+            <p>Je suis capable d'apporter mon expérience et ma maîtrise des outils suivants : Pack Office (Word, Excel, PowerPoint, Access, Outlook), Comptable (Quickbooks, Zohobooks, Sage 100, Sage Saari), Google Suites (Gmail, Google Drive, Google Calendar, Google Sheet), Autre (Canva, Trello, Notion), etc.</p>
+            <p>Ma mission est de simplifier la gestion financière des entreprises en fournissant des services de comptabilité et administratifs à distance de haute qualité. Je m'efforce d'apporter une expertise professionnelle et un service personnalisé à chaque projet.</p>
+            <h2>Mes services</h2>
+            <ul>
+                <li>Tenue de livre</li>
+                <li>Rapprochement bancaire</li>
+                <li>Pré-comptabilité</li>
+            </ul>
+            <p>En travaillant avec moi, les entreprises peuvent bénéficier d'une expertise comptable sans les tracas liés à l'embauche d'un comptable à plein temps. Je suis là pour libérer leur temps afin qu'ils puissent se concentrer sur ce qu'ils font de mieux : faire croître leur entreprise.</p>
+            <p>Si vous recherchez un partenaire de confiance pour vous aider à gérer vos finances de manière efficace et professionnelle, n'hésitez pas à me contacter. Ensemble, nous pouvons atteindre de nouveaux sommets et faire prospérer votre entreprise.</p>
+        </section>
+    </main>
+    <footer>
+    <p>&copy; 2024 Mon Assistant Virtuel. Tous droits réservés.</p>
+    <p>Email : <a href="mailto:rjeantsioriniaina@gmail.com">rjeantsioriniaina@gmail.com</a></p>
+    <p>Téléphone : <a href="tel:+261 34 18 669 68">+261 34 18 669 68</a></p>
+    <p>Facebook : <a href="https://www.facebook.com/votreprofil" target="_blank">Profil Facebook</a></p>
+    <p>LinkedIn : <a href="https://www.linkedin.com/in/votreprofil" target="_blank">Profil LinkedIn</a></p>
+</footer>
+
+
+</body>
+</html>
 
