--- a/about.html
+++ b/about.html
@@ -1,5 +1,32 @@
 <!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>À Propos</title>
+    <link rel="stylesheet" href="css/styles.css">
 
+    <!-- Meta Description pour SEO -->
+    <meta name="description" content="En savoir plus sur votre assistant virtuel en comptabilité. Découvrez mon parcours, mes compétences et comment je peux aider votre entreprise à atteindre ses objectifs financiers.">
+
+    <!-- Meta Keywords pour SEO -->
+    <meta name="keywords" content="assistant virtuel comptabilité, parcours professionnel, gestion administratif, expert comptable, outils comptables, services de comptabilité">
+
+    <!-- Meta pour Réseaux Sociaux - Open Graph -->
+    <meta property="og:title" content="À Propos de Votre Assistant Virtuel">
+    <meta property="og:description" content="En savoir plus sur votre assistant virtuel en comptabilité. Découvrez mon parcours, mes compétences et comment je peux aider votre entreprise à atteindre ses objectifs financiers.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://votre-username.github.io/mon-site-comptable/about.html">
+    <meta property="og:image" content="https://votre-username.github.io/mon-site-comptable/images/og-image.jpg">
+
+    <!-- Meta pour Twitter Cards -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="À Propos de Votre Assistant Virtuel">
+    <meta name="twitter:description" content="En savoir plus sur votre assistant virtuel en comptabilité. Découvrez mon parcours, mes compétences et comment je peux aider votre entreprise à atteindre ses objectifs financiers.">
+    <meta name="twitter:image" content="https://votre-username.github.io/mon-site-comptable/images/twitter-card-image.jpg">
+    <meta name="twitter:site" content="@votre-compte-twitter">
+
+</head>
 <body>
     <header>
         <h1>À Propos de Moi</h1>
@@ -34,7 +61,5 @@
     <p>LinkedIn : <a href="https://www.linkedin.com/in/votreprofil" target="_blank">Profil LinkedIn</a></p>
 </footer>
 
-
 </body>
 </html>
-
