--- a/about.html
+++ b/about.html
@@ -57,8 +57,8 @@
     <p>&copy; 2024 Mon Assistant Virtuel. Tous droits réservés.</p>
     <p>Email : <a href="mailto:rjeantsioriniaina@gmail.com">rjeantsioriniaina@gmail.com</a></p>
     <p>Téléphone : <a href="tel:+261 34 18 669 68">+261 34 18 669 68</a></p>
-    <p>Facebook : <a href="https://www.facebook.com/votreprofil" target="_blank">Profil Facebook</a></p>
-    <p>LinkedIn : <a href="https://www.linkedin.com/in/votreprofil" target="_blank">Profil LinkedIn</a></p>
+    <p>Facebook : <a href="https://www.facebook.com/@hajatina.randrianantenaina/" target="_blank">Profil Facebook</a></p>
+    <p>LinkedIn : <a href="https://www.linkedin.com/in/jean-randrianjaratiana-919b372b7" target="_blank">Profil LinkedIn</a></p>
 </footer>
 
 </body>
