--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 <body>
     <header>
         <h1>Bienvenue sur Mon Site d'Assistant Virtuel en Comptabilité</h1>
+        <p>En tant qu'assistant virtuel en comptabilité, je vous offre une gamme complète de services comptables et de gestion administrative adaptés à vos besoins spécifiques. Mon objectif est de fournir une expertise fiable et des solutions sur mesure pour simplifier la gestion financière de votre entreprise. Découvrez ci-dessous les services que j'offre et comment je peux vous aider à atteindre vos objectifs financiers.</p>
         <nav>
             <a href="about.html">À Propos</a>
             <a href="services.html">Services</a>
