--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
             <p>Je suis capable d'apporter mon expérience et ma maîtrise des outils suivants : Pack Office (Word, Excel, PowerPoint, Access, Outlook), Comptable (QuickBooks, ZohoBooks, Sage 100, Sage Saari) Google Suite (Gmail, Google Drive, Google Calendar, Google Sheet), Autre (Canva, Trello, Notion), etc.</p>
             <p>Ma mission est de simplifier la gestion financière des entreprises en fournissant des services de comptabilité et administratifs à distance de haute qualité. Je m'efforce d'apporter une expertise professionnelle et un service personnalisé à chaque projet.</p>
         </section>
-        <section>
-            <h2>Témoignages</h2>
-            <p>"Service exceptionnel, très professionnel !" - Client satisfait</p>
+        <section class="temoignages"> 
+            <h2>Témoignages</h2> 
+            <p>"Service exceptionnel, très professionnel !" - Client satisfait</p> 
         </section>
     </main>
     <footer>
