--- a/services.html
+++ b/services.html
@@ -40,6 +40,7 @@
         <section>
             <h2>Ce Que Je Propose</h2>
             <ul>
+                <li><img src="images/bookkeeping-icon.jpg" alt="Icône Tenue de livre"> Tenue de livre</li> 
                 <li>Tenue de livre</li>
                 <li>Rapprochement bancaire</li>
                 <li>Pré-comptabilité</li>
