--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 </head>
 <body>
     <header>
-        <img src="images/banner.jpg" alt="Bureau de comptabilité moderne avec des graphiques financiers"> 
+        <img src="images/banner.jpg" alt="Bureau de comptabilité moderne avec des graphiques financiers" class="responsive-img" width="800" height="600" itemprop="image"> 
         <h1>Bienvenue sur Mon Site d'Assistant Virtuel en Comptabilité</h1>
         <p>En tant qu'assistant virtuel en comptabilité, je vous offre une gamme complète de services comptables et de gestion administrative adaptés à vos besoins spécifiques. Mon objectif est de fournir une expertise fiable et des solutions sur mesure pour simplifier la gestion financière de votre entreprise. Découvrez ci-dessous les services que j'offre et comment je peux vous aider à atteindre vos objectifs financiers.</p>
         <nav>
@@ -41,7 +41,7 @@
     <main>
         <section>
             <h2>Les services que j'offre</h2>
-             <img src="images/teamwork.jpg" alt="Travail en équipe dans un bureau"> 
+             <img src="images/teamwork.webp" alt="Travail en équipe dans un bureau" class="responsive-img" width="800" height="600" itemprop="image"> 
             <ul>
                 <li>Tenue de livre</li>
                 <li>Préparation des écritures comptables</li>
