--- a/services.html
+++ b/services.html
@@ -39,16 +39,15 @@
     <main>
         <section>
             <h2>Ce Que Je Propose</h2>
-            <ul>
-                <li><img src="images/bookkeeping-icon.jpg" alt="Icône Tenue de livre"> Tenue de livre</li> 
-                <li>Tenue de livre</li>
-                <li>Rapprochement bancaire</li>
-                <li>Pré-comptabilité</li>
-                <li>Préparation des écritures comptables</li>
-                <li>Comptabilisation des écritures comptables</li>
-                <li>Suivis comptes clients</li>
-                <li>Suivis comptes fournisseurs</li>
-                <li>Paiements clients, fournisseurs, salaires ...</li>
+            <ul> 
+                 <li><img src="images/bookkeeping-icon.jpg" alt="Icône Tenue de livre"> Tenue de livre</li> 
+                 <li><img src="images/accounting-icon.webp" alt="Icône Préparation des écritures comptables"> Préparation des écritures comptables</li> 
+                 <li><img src="images/accounting-icon.webp" alt="Icône Comptabilisation des écritures comptables"> Comptabilisation des écritures comptables</li> 
+                 <li><img src="images/client-management-icon.webp" alt="Icône Suivis comptes clients"> Suivis comptes clients</li> 
+                 <li><img src="images/supplier-management-icon.webp" alt="Icône Suivis comptes fournisseurs"> Suivis comptes fournisseurs</li> 
+                 <li><img src="images/payment-icon.webp" alt="Icône Paiements clients, fournisseurs, salaires"> Paiements clients, fournisseurs, salaires ...</li> 
+                 <li><img src="images/bank-reconciliation-icon.jpg" alt="Icône Rapprochement bancaire"> Rapprochement bancaire</li> 
+                 <li><img src="images/pre-accounting-icon.webp" alt="Icône Pré-comptabilité"> Pré-comptabilité</li> 
             </ul>
         </section>
     </main>
