--- a/services.html
+++ b/services.html
@@ -40,13 +40,13 @@
         <section>
             <h2>Ce Que Je Propose</h2>
             <ul> 
-                 <li><img src="images/bookkeeping-icon.jpg" alt="Icône Tenue de livre"> Tenue de livre</li> 
+                 <li><img src="images/bookkeeping-icon.webp" alt="Icône Tenue de livre"> Tenue de livre</li> 
                  <li><img src="images/accounting-icon.webp" alt="Icône Préparation des écritures comptables"> Préparation des écritures comptables</li> 
                  <li><img src="images/accounting-icon.webp" alt="Icône Comptabilisation des écritures comptables"> Comptabilisation des écritures comptables</li> 
                  <li><img src="images/client-management-icon.webp" alt="Icône Suivis comptes clients"> Suivis comptes clients</li> 
                  <li><img src="images/supplier-management-icon.webp" alt="Icône Suivis comptes fournisseurs"> Suivis comptes fournisseurs</li> 
                  <li><img src="images/payment-icon.webp" alt="Icône Paiements clients, fournisseurs, salaires"> Paiements clients, fournisseurs, salaires ...</li> 
-                 <li><img src="images/bank-reconciliation-icon.jpg" alt="Icône Rapprochement bancaire"> Rapprochement bancaire</li> 
+                 <li><img src="images/bank-reconciliation-icon.webp" alt="Icône Rapprochement bancaire"> Rapprochement bancaire</li> 
                  <li><img src="images/pre-accounting-icon.webp" alt="Icône Pré-comptabilité"> Pré-comptabilité</li> 
             </ul>
         </section>
