--- a/services.html
+++ b/services.html
@@ -50,6 +50,10 @@
                  <li><img src="images/pre-accounting-icon.webp" alt="Icône Pré-comptabilité"> Pré-comptabilité</li> 
             </ul>
         </section>
+         <section> 
+             <h2>Graphiques et Tableaux</h2> 
+             <img src="images/financial-charts.webp" alt="Graphiques et Tableaux Financiers"> 
+         </section>
     </main>
     <footer>
     <p>&copy; 2024 Mon Assistant Virtuel. Tous droits réservés.</p>
