--- a/services.html
+++ b/services.html
@@ -52,7 +52,7 @@
         </section>
          <section> 
              <h2>Graphiques et Tableaux</h2> 
-             <img src="images/financial-charts.webp" alt="Graphiques et Tableaux Financiers"> 
+             <img src="images/financial-charts.webp" alt="Graphiques et Tableaux Financiers" class="responsive-img" width="800" height="600" itemprop="image"> 
          </section>
     </main>
     <footer>
