--- a/contact.html
+++ b/contact.html
@@ -44,6 +44,14 @@
                 <p>LinkedIn : <a href="https://www.linkedin.com/in/jean-randrianjaratiana-919b372b7" target="_blank">Profil LinkedIn</a></p>
             </div>
         </section>
+         <section> 
+             <h2>Moyens de Communication</h2> 
+             <img src="images/communication.jpg" alt="Moyens de communication" class="contact-image"> 
+         </section> 
+        <section> 
+            <h2>Notre Emplacement</h2> 
+            <img src="images/map.jpg" alt="Carte de notre emplacement" class="contact-image"> 
+         </section>
     </main>
     <footer>
     <p>&copy; 2024 Mon Assistant Virtuel. Tous droits réservés.</p>
