--- a/contact.html
+++ b/contact.html
@@ -46,11 +46,11 @@
         </section>
          <section> 
              <h2>Moyens de Communication</h2> 
-             <img src="images/communication.jpg" alt="Moyens de communication" class="contact-image"> 
+             <img src="images/communication.webp" alt="Moyens de communication" class="contact-image" class="responsive-img" width="800" height="600" itemprop="image"> 
          </section> 
         <section> 
             <h2>Notre Emplacement</h2> 
-            <img src="images/map.jpg" alt="Carte de notre emplacement" class="contact-image"> 
+            <img src="images/map.webp" alt="Carte de notre emplacement" class="contact-image" class="responsive-img" width="800" height="600" itemprop="image"> 
          </section>
     </main>
     <footer>
