--- a/services.html
+++ b/services.html
@@ -45,7 +45,7 @@
                  <li><img src="images/accounting-icon.webp" alt="Icône Comptabilisation des écritures comptables"> Comptabilisation des écritures comptables</li> 
                  <li><img src="images/client-management-icon.webp" alt="Icône Suivis comptes clients"> Suivis comptes clients</li> 
                  <li><img src="images/supplier-management-icon.webp" alt="Icône Suivis comptes fournisseurs"> Suivis comptes fournisseurs</li> 
-                 <li><img src="images/payment-icon.webp" alt="Icône Paiements clients, fournisseurs, salaires"> Paiements clients, fournisseurs, salaires ...</li> 
+                 <li><img src="images/payment-icon.webp" alt="Icône Paiements clients, fournisseurs, salaires"> Paiements clients, fournisseurs, salaires</li> 
                  <li><img src="images/bank-reconciliation-icon.webp" alt="Icône Rapprochement bancaire"> Rapprochement bancaire</li> 
                  <li><img src="images/pre-accounting-icon.webp" alt="Icône Pré-comptabilité"> Pré-comptabilité</li> 
             </ul>
