--- a/index.html
+++ b/index.html
@@ -40,17 +40,16 @@
     </header>
     <main>
         <section>
-            <h2>Les services que j'offre</h2>
+            <h2>Les services que j'offre :</h2>
              <img src="images/teamwork.webp" alt="Travail en équipe dans un bureau" class="responsive-img" width="800" height="600" itemprop="image"> 
             <ul>
-                <li>Tenue de livre</li>
-                <li>Préparation des écritures comptables</li>
-                <li>Comptabilisation des écritures comptables</li>
-                <li>Suivis comptes clients</li>
-                <li>Suivis comptes fournisseurs</li>
-                <li>Paiements clients, fournisseurs, salaires ...</li>
-                <li>Rapprochement bancaire</li>
-                <li>Pré-comptabilité</li>
+                <li><img src="images/bookkeeping-icon.webp" alt="Icône Tenue de livre"> Tenue de livre</li>
+                <li><img src="images/bank-reconciliation-icon.webp" alt="Icône Rapprochement bancaire"> Rapprochement bancaire</li> 
+                 <li><img src="images/pre-accounting-icon.webp" alt="Icône Pré-comptabilité"> Pré-comptabilité</li>
+                 <li><img src="images/accounting-icon.webp" alt="Icône Préparation des écritures comptables"> Préparation des écritures comptables</li> 
+                 <li><img src="images/client-management-icon.webp" alt="Icône Suivis comptes clients"> Suivis comptes clients</li> 
+                 <li><img src="images/supplier-management-icon.webp" alt="Icône Suivis comptes fournisseurs"> Suivis comptes fournisseurs</li> 
+                 <li><img src="images/payment-icon.webp" alt="Icône Paiements clients, fournisseurs, salaires"> Paiements clients, fournisseurs, salaires</li> 
             </ul>
         </section>
         <section>
