--- a/about.html
+++ b/about.html
@@ -45,9 +45,8 @@
             <p>Ma mission est de simplifier la gestion financière des entreprises en fournissant des services de comptabilité et administratifs à distance de haute qualité. Je m'efforce d'apporter une expertise professionnelle et un service personnalisé à chaque projet.</p>
             <h2>Mes services</h2>
             <ul>
-                <li>Tenue de livre</li>
-                <li>Rapprochement bancaire</li>
-                <li>Pré-comptabilité</li>
+                <li><img src="images/bank-reconciliation-icon.webp" alt="Icône Rapprochement bancaire"> Rapprochement bancaire</li> 
+                 <li><img src="images/pre-accounting-icon.webp" alt="Icône Pré-comptabilité"> Pré-comptabilité</li>
             </ul>
             <p>En travaillant avec moi, les entreprises peuvent bénéficier d'une expertise comptable sans les tracas liés à l'embauche d'un comptable à plein temps. Je suis là pour libérer leur temps afin qu'ils puissent se concentrer sur ce qu'ils font de mieux : faire croître leur entreprise.</p>
             <p>Si vous recherchez un partenaire de confiance pour vous aider à gérer vos finances de manière efficace et professionnelle, n'hésitez pas à me contacter. Ensemble, nous pouvons atteindre de nouveaux sommets et faire prospérer votre entreprise.</p>
