--- a/about.html
+++ b/about.html
@@ -29,6 +29,7 @@
 </head>
 <body>
     <header>
+        <img src="images/profil.webp" alt="photo de profile" class="responsive-img" width="800" height="600" itemprop="image">
         <h1>À Propos de Moi</h1>
         <nav>
             <a href="index.html">Accueil</a>
