--- a/index.html
+++ b/index.html
@@ -40,8 +40,9 @@
     </header>
     <main>
         <section>
+            <img src="images/teamwork.webp" alt="Travail en équipe dans un bureau" class="responsive-img" width="800" height="600" itemprop="image">
             <h2>Les services que j'offre :</h2>
-             <img src="images/teamwork.webp" alt="Travail en équipe dans un bureau" class="responsive-img" width="800" height="600" itemprop="image"> 
+              
             <ul>
                  <li><img src="images/bookkeeping-icon.webp" alt="Icône Tenue de livre"> Tenue de livre</li>
                  <li><img src="images/bank-reconciliation-icon.webp" alt="Icône Rapprochement bancaire"> Rapprochement bancaire</li> 
@@ -56,7 +57,16 @@
             <img src="images/profil.webp" alt="photo de profile" class="responsive-img" width="800" height="600" itemprop="image">
             <h2>À Propos de Moi</h2>
             <p>En tant qu'assistant virtuel, je suis déterminé à aider les entrepreneurs à atteindre leurs objectifs en leur fournissant des services comptables et de gestion administrative fiables et efficaces. Avec une solide expérience dans le domaine de la comptabilité et une passion pour l'optimisation des processus, je m'engage à offrir des solutions sur mesure pour répondre aux besoins spécifiques de chaque client.</p>
-            <p>Je suis capable d'apporter mon expérience et ma maîtrise des outils suivants : Pack Office (Word, Excel, PowerPoint, Access, Outlook), Comptable (QuickBooks, ZohoBooks, Sage 100, Sage Saari) Google Suite (Gmail, Google Drive, Google Calendar, Google Sheet), Autre (Canva, Trello, Notion), etc.</p>
+            <p>Je suis capable d'apporter mon expérience et ma maîtrise des outils suivants :</p>
+            <h2>Pack Office</h2>
+                <ul>
+                    <li>Word, Excel, PowerPoint, Access, Outlook</li>
+                </ul>
+                <h2>Comptable</h2>
+            <ul>
+                <li>QuickBooks, ZohoBooks, Sage 100, Sage Saari</li>
+                    Google Suite (Gmail, Google Drive, Google Calendar, Google Sheet), 
+                    Autre (Canva, Trello, Notion), etc.</p>
             <p>Ma mission est de simplifier la gestion financière des entreprises en fournissant des services de comptabilité et administratifs à distance de haute qualité. Je m'efforce d'apporter une expertise professionnelle et un service personnalisé à chaque projet.</p>
         </section>
         <section class="temoignages"> 
