--- a/index.html
+++ b/index.html
@@ -58,15 +58,33 @@
             <h2>À Propos de Moi</h2>
             <p>En tant qu'assistant virtuel, je suis déterminé à aider les entrepreneurs à atteindre leurs objectifs en leur fournissant des services comptables et de gestion administrative fiables et efficaces. Avec une solide expérience dans le domaine de la comptabilité et une passion pour l'optimisation des processus, je m'engage à offrir des solutions sur mesure pour répondre aux besoins spécifiques de chaque client.</p>
             <p>Je suis capable d'apporter mon expérience et ma maîtrise des outils suivants :</p>
+        </section>
+    <section>
+        <div>
             <h2>Pack Office</h2>
                 <ul>
                     <li>Word, Excel, PowerPoint, Access, Outlook</li>
                 </ul>
-                <h2>Comptable</h2>
+        </div>
+        <div>        
+        <h2>Comptable</h2>
             <ul>
                 <li>QuickBooks, ZohoBooks, Sage 100, Sage Saari</li>
-                    Google Suite (Gmail, Google Drive, Google Calendar, Google Sheet), 
-                    Autre (Canva, Trello, Notion), etc.</p>
+            </ul>
+        </div>
+        <div>
+         <h2>Google Suite</h2>
+            <ul>
+                <li>Gmail, Google Drive, Google Calendar, Google Sheet</li>
+            </ul>
+        </div>
+        <div>
+                <h2>Autre</h2> 
+            <ul>
+                <li>Canva, Trello, Notion, etc.</li>
+            </ul>
+        </div>
+    
             <p>Ma mission est de simplifier la gestion financière des entreprises en fournissant des services de comptabilité et administratifs à distance de haute qualité. Je m'efforce d'apporter une expertise professionnelle et un service personnalisé à chaque projet.</p>
         </section>
         <section class="temoignages"> 
