--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
         <h1>Bienvenue sur Mon Site d'Assistant Virtuel en Comptabilité</h1>
         <p>En tant qu'assistant virtuel en comptabilité, je vous offre une gamme complète de services comptables et de gestion administrative adaptés à vos besoins spécifiques. Mon objectif est de fournir une expertise fiable et des solutions sur mesure pour simplifier la gestion financière de votre entreprise. Découvrez ci-dessous les services que j'offre et comment je peux vous aider à atteindre vos objectifs financiers.</p>
         <nav>
-            <a href="about.html">À Propos</a>
-            <a href="services.html">Services</a>
-            <a href="contact.html">Contact</a>
+            <a href="about.html">À PROPOS</a>
+            <a href="services.html">SERVICES</a>
+            <a href="contact.html">CONTACT</a>
         </nav>
     </header>
     <main>
@@ -66,14 +66,14 @@
                     <li>Word, Excel, PowerPoint, Access, Outlook</li>
                 </ul>
         </div>
-        <div>        
-        <h2>Comptable</h2>
+         <div>        
+           <h2>Comptable</h2>
             <ul>
                 <li>QuickBooks, ZohoBooks, Sage 100, Sage Saari</li>
             </ul>
         </div>
         <div>
-         <h2>Google Suite</h2>
+         <h2>Google Suites</h2>
             <ul>
                 <li>Gmail, Google Drive, Google Calendar, Google Sheet</li>
             </ul>
