--- a/services.html
+++ b/services.html
@@ -38,7 +38,7 @@
     </header>
     <main>
         <section>
-            <h2>Ce Que Je Propose</h2>
+            <h2>Ce Que Je Propose :</h2>
             <ul> 
                  <li><img src="images/bookkeeping-icon.webp" alt="Icône Tenue de livre"> Tenue de livre</li> 
                  <li><img src="images/accounting-icon.webp" alt="Icône Préparation des écritures comptables"> Préparation des écritures comptables</li> 
@@ -51,7 +51,6 @@
             </ul>
         </section>
          <section> 
-             <h2>Graphiques et Tableaux</h2> 
              <img src="images/financial-charts.webp" alt="Graphiques et Tableaux Financiers" class="responsive-img" width="800" height="600" itemprop="image"> 
          </section>
     </main>
