--- a/services.html
+++ b/services.html
@@ -38,6 +38,7 @@
     </header>
     <main>
         <section>
+             <img src="images/mes-services.webp" alt="mes sevices" class="responsive-img" width="800" height="600" itemprop="image"> 
             <h2>Ce Que Je Propose :</h2>
             <ul> 
                  <li><img src="images/bookkeeping-icon.webp" alt="Icône Tenue de livre"> Tenue de livre</li>
