--- a/index.html
+++ b/index.html
@@ -57,29 +57,29 @@
             <img src="images/profil.webp" alt="photo de profile" class="responsive-img" width="800" height="600" itemprop="image">
             <h2>À Propos de Moi</h2>
             <p>En tant qu'assistant virtuel, je suis déterminé à aider les entrepreneurs à atteindre leurs objectifs en leur fournissant des services comptables et de gestion administrative fiables et efficaces. Avec une solide expérience dans le domaine de la comptabilité et une passion pour l'optimisation des processus, je m'engage à offrir des solutions sur mesure pour répondre aux besoins spécifiques de chaque client.</p>
-            <p>Je suis capable d'apporter mon expérience et ma maîtrise des outils suivants :</p>
+            <p>Je suis capable d'apporter mon expérience et ma maîtrise des <strong>logiciels et outils</strong> suivants :</p>
         </section>
     <section>
         <div>
-            <h2>Pack Office</h2>
+            <h2>Pack Office :</h2>
                 <ul>
                     <li>Word, Excel, PowerPoint, Access, Outlook</li>
                 </ul>
         </div>
          <div>        
-           <h2>Comptable</h2>
+           <h2>Comptable :</h2>
             <ul>
                 <li>QuickBooks, ZohoBooks, Sage 100, Sage Saari</li>
             </ul>
         </div>
         <div>
-         <h2>Google Suites</h2>
+         <h2>Google Suites :</h2>
             <ul>
-                <li>Gmail, Google Drive, Google Calendar, Google Sheet</li>
+                <li>Gmail, Google Drive, Google Calendar, Google Sheets</li>
             </ul>
         </div>
         <div>
-                <h2>Autre</h2> 
+                <h2>Autre :</h2> 
             <ul>
                 <li>Canva, Trello, Notion, etc.</li>
             </ul>
