--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
     <meta property="og:title" content="Assistant Virtuel en Comptabilité">
     <meta property="og:description" content="Découvrez les services de gestion comptable offerts par votre assistant virtuel : tenue de livre, préparation et comptabilisation des écritures comptables, suivis des comptes clients et fournisseurs, paiements, rapprochement bancaire et pré-comptabilité. Expertise et fiabilité pour votre entreprise.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://votre-username.github.io/mon-site-comptable/">
-    <meta property="og:image" content="https://votre-username.github.io/mon-site-comptable/images/og-image.jpg">
+    <meta property="og:url" content="https://rjeantsioriniaina.github.io/AV-Comptable/">
+    <meta property="og:image" content="https://rjeantsioriniaina.github.io/AV-Comptable/images/banner.webp">
 
     <!-- Meta pour Twitter Cards -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Assistant Virtuel en Comptabilité">
     <meta name="twitter:description" content="Découvrez les services de gestion comptable offerts par votre assistant virtuel : tenue de livre, préparation et comptabilisation des écritures comptables, suivis des comptes clients et fournisseurs, paiements, rapprochement bancaire et pré-comptabilité. Expertise et fiabilité pour votre entreprise.">
-    <meta name="twitter:image" content="https://votre-username.github.io/mon-site-comptable/images/twitter-card-image.jpg">
-    <meta name="twitter:site" content="@votre-compte-twitter">
+    <meta name="twitter:image" content="https://rjeantsioriniaina.github.io/AV-Comptable/images/banner.webp">
+    <meta name="twitter:site" content="https://rjeantsioriniaina.github.io/AV-Comptable/">
 
 </head>
 <body>
