--- a/contact.html
+++ b/contact.html
@@ -61,3 +61,32 @@
     </footer>
 </body>
 </html>
+
+    <!-- JavaScript pour le Formulaire -->
+    <script>
+        function handleFormSubmit(event) {
+            event.preventDefault();
+            var form = event.target;
+            var formData = new FormData(form);
+
+            fetch(form.action, {
+                method: form.method,
+                body: formData,
+                headers: {
+                    'Accept': 'application/json'
+                }
+            }).then(response => {
+                if (response.ok) {
+                    window.location.href = "merci.html";
+                } else {
+                    alert('Il y a eu une erreur lors de l\'envoi de votre message.');
+                }
+            }).catch(error => {
+                console.error('Erreur:', error);
+                alert('Il y a eu une erreur lors de l\'envoi de votre message.');
+            });
+        }
+    </script>
+</body>
+</html>
+
