--- a/contact.html
+++ b/contact.html
@@ -77,7 +77,7 @@
                 }
             }).then(response => {
                 if (response.ok) {
-                    window.location.href = "merci.html";
+                    window.location.href = "https://rjeantsioriniaina.github.io/AV-Comptable/merci.html";
                 } else {
                     alert('Il y a eu une erreur lors de l\'envoi de votre message.');
                 }
