--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
     <link rel="stylesheet" href="css/styles.css">
 
     <!-- Meta Description pour SEO -->
-    <meta name="description" content="Découvrez les services de gestion comptable offerts par votre assistant virtuel : tenue de livre, préparation et comptabilisation des écritures comptables, suivis des comptes clients et fournisseurs, paiements, rapprochement bancaire et pré-comptabilité. Expertise et fiabilité pour votre entreprise.">
+    <meta name="description" content="Découvrez les services de gestion comptable offerts par votre assistant virtuel : tenue de livre, préparation et comptabilisation des écritures comptables, rapprochement bancaire et pré-comptabilité. Expertise et fiabilité pour votre entreprise.">
 
     <!-- Meta Keywords pour SEO -->
     <meta name="keywords" content="assistant virtuel comptabilité, tenue de livre, préparation des écritures comptables, comptabilisation, suivis comptes clients, suivis comptes fournisseurs, paiements, rapprochement bancaire, pré-comptabilité, expert comptable virtuel">
 
+    <!-- URL canonique -->
+    <link rel="canonical" href="https://rjeantsioriniaina.github.io/AV-Comptable/" />
     <!-- Meta pour Réseaux Sociaux - Open Graph -->
     <meta property="og:title" content="Assistant Virtuel en Comptabilité">
     <meta property="og:description" content="Découvrez les services de gestion comptable offerts par votre assistant virtuel : tenue de livre, préparation et comptabilisation des écritures comptables, suivis des comptes clients et fournisseurs, paiements, rapprochement bancaire et pré-comptabilité. Expertise et fiabilité pour votre entreprise.">
