--- a/services.html
+++ b/services.html
@@ -10,21 +10,23 @@
     <meta name="description" content="Découvrez les services comptables offerts par votre assistant virtuel : tenue de livre, rapprochement bancaire, pré-comptabilité, préparation et comptabilisation des écritures comptables, suivis des comptes clients et fournisseurs, paiements.">
 
     <!-- Meta Keywords pour SEO -->
-    <meta name="keywords" content="assistant virtuel comptabilité, tenue de livre, rapprochement bancaire, pré-comptabilité, préparation des écritures comptables, comptabilisation, suivis comptes clients, suivis comptes fournisseurs, paiements, expert comptable virtuel">
+    <meta name="keywords" content="assistant virtuel comptabilité, tenue de livre, rapprochement bancaire, pré-comptabilité, préparation des écritures comptables, expert comptable virtuel">
 
+    <!-- URL canonique -->
+    <link rel="canonical" href="https://rjeantsioriniaina.github.io/AV-Comptable/services.html" />
     <!-- Meta pour Réseaux Sociaux - Open Graph -->
     <meta property="og:title" content="Services Comptables de Votre Assistant Virtuel">
     <meta property="og:description" content="Découvrez les services comptables offerts par votre assistant virtuel : tenue de livre, rapprochement bancaire, pré-comptabilité, préparation et comptabilisation des écritures comptables, suivis des comptes clients et fournisseurs, paiements.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://votre-username.github.io/mon-site-comptable/services.html">
-    <meta property="og:image" content="https://votre-username.github.io/mon-site-comptable/images/og-image.jpg">
+    <meta property="og:url" content="https://rjeantsioriniaina.github.io/AV-Comptable/services.html">
+    <meta property="og:image" content="https://rjeantsioriniaina.github.io/AV-Comptable/images/mes-services.webp">
 
     <!-- Meta pour Twitter Cards -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Services Comptables de Votre Assistant Virtuel">
     <meta name="twitter:description" content="Découvrez les services comptables offerts par votre assistant virtuel : tenue de livre, rapprochement bancaire, pré-comptabilité, préparation et comptabilisation des écritures comptables, suivis des comptes clients et fournisseurs, paiements.">
-    <meta name="twitter:image" content="https://votre-username.github.io/mon-site-comptable/images/twitter-card-image.jpg">
-    <meta name="twitter:site" content="@votre-compte-twitter">
+    <meta name="twitter:image" content="https://rjeantsioriniaina.github.io/AV-Comptable/images/mes-services.webp">
+    <meta name="twitter:site" content="https://rjeantsioriniaina.github.io/AV-Comptable/services.html">
 
 </head>
 <body>
