--- a/about.html
+++ b/about.html
@@ -12,19 +12,21 @@
     <!-- Meta Keywords pour SEO -->
     <meta name="keywords" content="assistant virtuel comptabilité, parcours professionnel, gestion administratif, expert comptable, outils comptables, services de comptabilité">
 
+    <!-- URL canonique -->
+    <link rel="canonical" href="https://rjeantsioriniaina.github.io/AV-Comptable/about.html" />
     <!-- Meta pour Réseaux Sociaux - Open Graph -->
     <meta property="og:title" content="À Propos de Votre Assistant Virtuel">
     <meta property="og:description" content="En savoir plus sur votre assistant virtuel en comptabilité. Découvrez mon parcours, mes compétences et comment je peux aider votre entreprise à atteindre ses objectifs financiers.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://votre-username.github.io/mon-site-comptable/about.html">
-    <meta property="og:image" content="https://votre-username.github.io/mon-site-comptable/images/og-image.jpg">
+    <meta property="og:url" content="https://rjeantsioriniaina.github.io/AV-Comptable/about.html">
+    <meta property="og:image" content="https://rjeantsioriniaina.github.io/AV-Comptable/images/profil.webp">
 
     <!-- Meta pour Twitter Cards -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="À Propos de Votre Assistant Virtuel">
     <meta name="twitter:description" content="En savoir plus sur votre assistant virtuel en comptabilité. Découvrez mon parcours, mes compétences et comment je peux aider votre entreprise à atteindre ses objectifs financiers.">
-    <meta name="twitter:image" content="https://votre-username.github.io/mon-site-comptable/images/twitter-card-image.jpg">
-    <meta name="twitter:site" content="@votre-compte-twitter">
+    <meta name="twitter:image" content="https://rjeantsioriniaina.github.io/AV-Comptable/images/profil.webp">
+    <meta name="twitter:site" content="https://rjeantsioriniaina.github.io/AV-Comptable/about.html">
 
 </head>
 <body>
