--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             </ul>
         </section>
         <section>
-            <img src="images/Assistant-Viruel.webp" alt="photo de profile" class="responsive-img" width="800" height="600" itemprop="image">
+            <img src="images/profil.webp" alt="photo de profile" class="responsive-img" width="800" height="600" itemprop="image">
             <h2>À Propos de Moi</h2>
             <p>En tant qu'assistant virtuel, je suis déterminé à aider les entrepreneurs à atteindre leurs objectifs en leur fournissant des services comptables et de gestion administrative fiables et efficaces. Avec une solide expérience dans le domaine de la comptabilité et une passion pour l'optimisation des processus, je m'engage à offrir des solutions sur mesure pour répondre aux besoins spécifiques de chaque client.</p>
             <p>Je suis capable d'apporter mon expérience et ma maîtrise des <strong>logiciels et outils</strong> suivants :</p>
