--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/styles.css">
 
     <!-- Meta Description pour SEO -->
-    <meta name="description" content="Découvrez les services de gestion comptable offerts par votre assistant virtuel : tenue de livre, préparation et comptabilisation des écritures comptables, rapprochement bancaire et pré-comptabilité. Expertise et fiabilité pour votre entreprise.">
+    <meta name="description" content="Services de comptabilité par votre assistant virtuel : tenue de livre, rapprochement bancaire, écritures comptables. Expertise fiable.">
 
     <!-- Meta Keywords pour SEO -->
     <meta name="keywords" content="assistant virtuel comptabilité, tenue de livre, préparation des écritures comptables, comptabilisation, suivis comptes clients, suivis comptes fournisseurs, paiements, rapprochement bancaire, pré-comptabilité, expert comptable virtuel">
