--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 Votre Assistant Virtuel. Tous droits réservés.</p>
+        <p>&copy; 2024 Mon Assistant Virtuel. Tous droits réservés.</p>
     </footer>
 </body>
 </html>
