--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Assistant virtuel en Comptabilité - Tenue de livre, rapprochement bancaire</title>
+    <title>assistant virtuel compta - Tenue de livre & rapprochement bancaire</title>
     <link rel="stylesheet" href="css/styles.css">
 
     <!-- Meta Description pour SEO -->
-    <meta name="description" content="Découvrez nos services d'Assistance virtuelle en comptabilité : Tenue de livre, rapprochement bancaire, écritures comptables, et plus. Expertise fiable pour votre entreprise.">
+    <meta name="description" content="Découvrez nos services d'Assistance virtuelle en comptabilité : Tenue de livre, rapprochement bancaire, écritures comptables.">
 
     <!-- Meta Keywords pour SEO -->
     <meta name="keywords" content="Assistance virtuelle, Tenue de livre, Assistante virtuelle, assistant virtuel, rapprochement bancaire, écritures comptables, comptabilisation, paiements, expert comptable">
