--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <!-- URL canonique -->
     <link rel="canonical" href="https://rjeantsioriniaina.github.io/AV-Comptable/" />
     <!-- Meta pour Réseaux Sociaux - Open Graph -->
-    <meta property="og:title" content="Assistant Virtuel en Comptabilité - Tenue de Livre, Rapprochement Bancaire">
-    <meta property="og:description" content="Découvrez les services de gestion comptable offerts par votre assistant virtuel : tenue de livre, préparation et comptabilisation des écritures comptables, suivis des comptes clients et fournisseurs, paiements, rapprochement bancaire et pré-comptabilité. Expertise et fiabilité pour votre entreprise.">
+    <meta property="og:title" content="Assistance Virtuel en Comptabilité - Tenue de livre, rapprochement bancaire">
+    <meta property="og:description" content="Découvrez les services de gestion comptable offerts par votre assistant virtuel : tenue de livre, préparation et comptabilisation des écritures comptables, paiements, rapprochement bancaire. Expertise et fiabilité pour votre entreprise.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://rjeantsioriniaina.github.io/AV-Comptable/">
     <meta property="og:image" content="https://rjeantsioriniaina.github.io/AV-Comptable/images/banner.webp">
