--- a/services.html
+++ b/services.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/styles.css">
 
     <!-- Meta Description pour SEO -->
-    <meta name="description" content="Découvrez les services comptables offerts par votre assistant virtuel : tenue de livre, rapprochement bancaire, pré-comptabilité, préparation et comptabilisation des écritures comptables, suivis des comptes clients et fournisseurs, paiements.">
+    <meta name="description" content="Découvrez les services comptables par votre Assistante virtuelle : Tenue de livre, rapprochement bancaire, comptabilisation des écritures comptables.">
 
     <!-- Meta Keywords pour SEO -->
     <meta name="keywords" content="assistant virtuel comptabilité, tenue de livre, rapprochement bancaire, pré-comptabilité, préparation des écritures comptables, expert comptable virtuel">
