--- a/services.html
+++ b/services.html
@@ -10,7 +10,7 @@
     <meta name="description" content="Découvrez les services comptables par votre Assistante virtuelle : Tenue de livre, rapprochement bancaire, comptabilisation des écritures comptables.">
 
     <!-- Meta Keywords pour SEO -->
-    <meta name="keywords" content="assistant virtuel comptabilité, tenue de livre, rapprochement bancaire, pré-comptabilité, préparation des écritures comptables, expert comptable virtuel">
+    <meta name="keywords" content="assistant virtuel, Tenue de livre, rapprochement bancaire, paiement, écritures comptables, comptabilisation, expert comptable">
 
     <!-- URL canonique -->
     <link rel="canonical" href="https://rjeantsioriniaina.github.io/AV-Comptable/services.html" />
