--- a/services.html
+++ b/services.html
@@ -10,12 +10,12 @@
     <meta name="description" content="Découvrez les services comptables par votre Assistante virtuelle : Tenue de livre, rapprochement bancaire, comptabilisation des écritures comptables.">
 
     <!-- Meta Keywords pour SEO -->
-    <meta name="keywords" content="assistant virtuel, Tenue de livre, rapprochement bancaire, paiement, écritures comptables, comptabilisation, expert comptable">
+    <meta name="keywords" content="assistance virtuelle, tenue de livre, assistante virtuelle, assistant virtuel, rapprochement bancaire, écritures comptables, comptabilisation, expert comptable">
 
     <!-- URL canonique -->
     <link rel="canonical" href="https://rjeantsioriniaina.github.io/AV-Comptable/services.html" />
     <!-- Meta pour Réseaux Sociaux - Open Graph -->
-    <meta property="og:title" content="Services Comptables de Votre Assistant Virtuel">
+    <meta property="og:title" content="Services d'Assistance Virtuelle en Comptabilité">
     <meta property="og:description" content="Découvrez les services comptables offerts par votre assistant virtuel : tenue de livre, rapprochement bancaire, pré-comptabilité, préparation et comptabilisation des écritures comptables, suivis des comptes clients et fournisseurs, paiements.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://rjeantsioriniaina.github.io/AV-Comptable/services.html">
@@ -23,15 +23,14 @@
 
     <!-- Meta pour Twitter Cards -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Services Comptables de Votre Assistant Virtuel">
+    <meta name="twitter:title" content="Services d'Assistance Virtuelle en Comptabilité">
     <meta name="twitter:description" content="Découvrez les services comptables offerts par votre assistant virtuel : tenue de livre, rapprochement bancaire, pré-comptabilité, préparation et comptabilisation des écritures comptables, suivis des comptes clients et fournisseurs, paiements.">
     <meta name="twitter:image" content="https://rjeantsioriniaina.github.io/AV-Comptable/images/mes-services.webp">
     <meta name="twitter:site" content="https://rjeantsioriniaina.github.io/AV-Comptable/services.html">
-
 </head>
 <body>
     <header>
-        <h1>Mes Services</h1>
+        <h1>Mes Services d'Assistance Virtuelle en Comptabilité</h1>
         <nav>
             <a href="index.html">Accueil</a>
             <a href="about.html">À Propos</a>
@@ -40,29 +39,47 @@
     </header>
     <main>
         <section>
-             <img src="images/Assistant-Viruel.webp" alt="mes sevices" class="responsive-img" width="800" height="600" itemprop="image"> 
+            <img src="images/Assistant-Viruel.webp" alt="Services d'assistance virtuelle en comptabilité" class="responsive-img" width="800" height="600" itemprop="image"> 
             <h2>Ce Que Je Propose :</h2>
             <ul> 
-                 <li><img src="images/bookkeeping-icon.webp" alt="Icône Tenue de livre"> Tenue de livre</li>
-                 <li><img src="images/bank-reconciliation-icon.webp" alt="Icône Rapprochement bancaire"> Rapprochement bancaire</li> 
-                 <li><img src="images/pre-accounting-icon.webp" alt="Icône Pré-comptabilité"> Pré-comptabilité</li> 
-                 <li><img src="images/accounting-icon.webp" alt="Icône Préparation des écritures comptables"> Préparation des écritures comptables</li> 
-                 <li><img src="images/accounting-icon.webp" alt="Icône Comptabilisation des écritures comptables"> Comptabilisation des écritures comptables</li> 
-                 <li><img src="images/client-management-icon.webp" alt="Icône Suivis comptes clients"> Suivis comptes clients</li> 
-                 <li><img src="images/supplier-management-icon.webp" alt="Icône Suivis comptes fournisseurs"> Suivis comptes fournisseurs</li> 
-                 <li><img src="images/payment-icon.webp" alt="Icône Paiements clients, fournisseurs, salaires"> Paiements clients, fournisseurs, salaires</li> 
-             </ul>
+                <li><img src="images/bookkeeping-icon.webp" alt="Icône Tenue de livre"> <h3>Tenue de livre</h3> - Une gestion précise et fiable de vos livres comptables, assurant une transparence totale de vos finances.</li>
+                <li><img src="images/bank-reconciliation-icon.webp" alt="Icône Rapprochement bancaire"> <h3>Rapprochement bancaire</h3> - Nous vérifions la concordance entre vos relevés bancaires et vos registres comptables pour éviter toute anomalie.</li> 
+                <li><img src="images/pre-accounting-icon.webp" alt="Icône Pré-comptabilité"> <h3>Pré-comptabilité</h3> - Préparation initiale et organisation des documents comptables afin de simplifier les tâches de fin de mois et les audits.</li> 
+                <li><img src="images/accounting-icon.webp" alt="Icône Préparation des écritures comptables"> <h3>Préparation des écritures comptables</h3> - Saisie et comptabilisation des transactions financières en temps réel pour une gestion efficace.</li> 
+                <li><img src="images/accounting-icon.webp" alt="Icône Comptabilisation des écritures comptables"> <h3>Comptabilisation des écritures comptables</h3> - Enregistrement détaillé des transactions pour un suivi précis.</li> 
+                <li><img src="images/client-management-icon.webp" alt="Icône Suivis comptes clients"> <h3>Suivis comptes clients</h3> - Gestion des créances clients pour optimiser vos flux de trésorerie.</li> 
+                <li><img src="images/supplier-management-icon.webp" alt="Icône Suivis comptes fournisseurs"> <h3>Suivis comptes fournisseurs</h3> - Maintien des relations avec vos fournisseurs et gestion des paiements pour garantir une collaboration fluide.</li> 
+                <li><img src="images/payment-icon.webp" alt="Icône Paiements clients, fournisseurs, salaires"> <h3>Paiements clients, fournisseurs, salaires</h3> - Gestion des paiements réguliers et ponctuels pour assurer la stabilité financière de votre entreprise.</li> 
+            </ul>
         </section>
-         <section> 
-             <img src="images/financial-charts.webp" alt="Graphiques et Tableaux Financiers" class="responsive-img" width="800" height="600" itemprop="image"> 
-         </section>
+        <section>
+            <h2>Graphiques et Tableaux Financiers</h2> 
+            <img src="images/financial-charts.webp" alt="Graphiques et tableaux financiers de comptabilité" class="responsive-img" width="800" height="600" itemprop="image"> 
+        </section>
+        <section>
+            <h2>Ressources et Articles</h2>
+            <ul>
+                <li><a href="blog/article1.html">Comment optimiser votre tenue de livre avec un assistant virtuel</a></li>
+                <li><a href="blog/article2.html">Les avantages du rapprochement bancaire pour les petites entreprises</a></li>
+                <li><a href="blog/article3.html">Guide complet sur la préparation des écritures comptables</a></li>
+            </ul>
+        </section>
+        <section>
+            <h2>Contactez-Nous</h2>
+            <p>Contactez-nous dès aujourd'hui pour découvrir comment nos services d'<strong>assistance virtuelle en comptabilité</strong> peuvent vous aider. <a href="contact.html" class="cta-button">Nous contacter</a></p>
+        </section>
+        <section class="temoignages"> 
+            <h2>Témoignages</h2> 
+            <blockquote>"Service exceptionnel, très professionnel !" - Client satisfait</blockquote>
+            <blockquote>"Une aide précieuse pour notre comptabilité. Hautement recommandé !" - Un autre client satisfait</blockquote>
+        </section>
     </main>
     <footer>
-    <p>&copy; 2024 Mon Assistant Virtuel. Tous droits réservés.</p>
-    <p>Email : <a href="mailto:rjeantsioriniaina@gmail.com">rjeantsioriniaina@gmail.com</a></p>
-    <p>Téléphone : <a href="tel:+261 34 18 669 68">+261 34 18 669 68</a></p>
-    <p>Facebook : <a href="https://www.facebook.com/@hajatina.randrianantenaina/" target="_blank">Profil Facebook</a></p>
-    <p>LinkedIn : <a href="https://www.linkedin.com/in/jean-tsioriniaina-984998340" target="_blank">Profil LinkedIn</a></p>
+        <p>&copy; 2024 Mon Assistant Virtuel. Tous droits réservés.</p>
+        <p>Email : <a href="mailto:rjeantsioriniaina@gmail.com">rjeantsioriniaina@gmail.com</a></p>
+        <p>Téléphone : <a href="tel:+261 34 18 669 68">+261 34 18 669 68</a></p>
+        <p>Facebook : <a href="https://www.facebook.com/@hajatina.randrianantenaina/" target="_blank">Profil Facebook</a></p>
+        <p>LinkedIn : <a href="https://www.linkedin.com/in/jean-tsioriniaina-984998340" target="_blank">Profil LinkedIn</a></p>
     </footer>
 </body>
 </html>
