--- a/services.html
+++ b/services.html
@@ -59,9 +59,9 @@
         <section>
             <h2>Ressources et Articles</h2>
             <ul>
-                <li><a href="blog/article1.html">Comment optimiser votre tenue de livre avec un assistant virtuel</a></li>
-                <li><a href="blog/article2.html">Les avantages du rapprochement bancaire pour les petites entreprises</a></li>
-                <li><a href="blog/article3.html">Guide complet sur la préparation des écritures comptables</a></li>
+                <li><a href="blog/optimiser-tenue-de-livre.html">Comment optimiser votre tenue de livre avec un assistant virtuel</a></li>
+                <li><a href="blog/avantages-rapprochement-bancaire.html">Les avantages du rapprochement bancaire pour les petites entreprises</a></li>
+                <li><a href="blog/guide-preparation-ecritures-comptables.html">Guide complet sur la préparation des écritures comptables</a></li>
             </ul>
         </section>
         <section>
