--- a/index.html
+++ b/index.html
@@ -13,20 +13,20 @@
     <meta name="keywords" content="Assistance virtuelle, Tenue de livre, Assistante virtuelle, assistant virtuel, rapprochement bancaire, écritures comptables, comptabilisation, paiements, expert comptable">
 
     <!-- URL canonique -->
-    <link rel="canonical" href="https://rjeantsioriniaina.github.io/AV-Comptable/" />
+    <link rel="canonical" href="https://rjeantsioriniaina.github.io/virtuelcomptable/" />
     <!-- Meta pour Réseaux Sociaux - Open Graph -->
     <meta property="og:title" content="Assistance Virtuel en Comptabilité - Tenue de livre, rapprochement bancaire">
     <meta property="og:description" content="Découvrez les services de gestion comptable offerts par votre assistant virtuel : tenue de livre, préparation et comptabilisation des écritures comptables, paiements, rapprochement bancaire. Expertise et fiabilité pour votre entreprise.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://rjeantsioriniaina.github.io/AV-Comptable/">
-    <meta property="og:image" content="https://rjeantsioriniaina.github.io/AV-Comptable/images/banner.webp">
+    <meta property="og:url" content="https://rjeantsioriniaina.github.io/virtuelcomptable/">
+    <meta property="og:image" content="https://rjeantsioriniaina.github.io/virtuelcomptable/images/banner.webp">
 
     <!-- Meta pour Twitter Cards -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Assistant Virtuel en Comptabilité - Tenue de Livre, Rapprochement Bancaire">
     <meta name="twitter:description" content="Découvrez les services de gestion comptable offerts par votre assistant virtuel : tenue de livre, préparation et comptabilisation des écritures comptables, suivis des comptes clients et fournisseurs, paiements, rapprochement bancaire et pré-comptabilité. Expertise et fiabilité pour votre entreprise.">
-    <meta name="twitter:image" content="https://rjeantsioriniaina.github.io/AV-Comptable/images/banner.webp">
-    <meta name="twitter:site" content="https://rjeantsioriniaina.github.io/AV-Comptable/">
+    <meta name="twitter:image" content="https://rjeantsioriniaina.github.io/virtuelcomptable/images/banner.webp">
+    <meta name="twitter:site" content="https://rjeantsioriniaina.github.io/virtuelcomptable/">
 </head>
 <body>
     <header>
