--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
 
     <!-- URL canonique -->
     <link rel="canonical" href="https://rjeantsioriniaina.github.io/virtuelcomptable/" />
+
+       <!-- Directive d'indexation -->
+    <meta name="robots" content="index, follow">
+    
     <!-- Meta pour Réseaux Sociaux - Open Graph -->
     <meta property="og:title" content="Assistance Virtuel en Comptabilité - Tenue de livre, rapprochement bancaire">
     <meta property="og:description" content="Découvrez les services de gestion comptable offerts par votre assistant virtuel : tenue de livre, préparation et comptabilisation des écritures comptables, paiements, rapprochement bancaire. Expertise et fiabilité pour votre entreprise.">
