--- a/services.html
+++ b/services.html
@@ -14,6 +14,9 @@
 
     <!-- URL canonique -->
     <link rel="canonical" href="https://rjeantsioriniaina.github.io/virtuelcomptable/services.html" />
+       <!-- Directive d'indexation -->
+    <meta name="robots" content="index, follow">
+    
     <!-- Meta pour Réseaux Sociaux - Open Graph -->
     <meta property="og:title" content="Services d'Assistance Virtuelle en Comptabilité">
     <meta property="og:description" content="Découvrez les services comptables offerts par votre assistant virtuel : tenue de livre, rapprochement bancaire, pré-comptabilité, préparation et comptabilisation des écritures comptables, suivis des comptes clients et fournisseurs, paiements.">
