--- a/about.html
+++ b/about.html
@@ -14,6 +14,10 @@
 
     <!-- URL canonique -->
     <link rel="canonical" href="https://rjeantsioriniaina.github.io/virtuelcomptable/about.html" />
+
+       <!-- Directive d'indexation -->
+    <meta name="robots" content="index, follow">
+    
     <!-- Meta pour Réseaux Sociaux - Open Graph -->
     <meta property="og:title" content="À Propos de Votre Assistant Virtuel">
     <meta property="og:description" content="En savoir plus sur votre assistant virtuel en comptabilité. Découvrez mon parcours, mes compétences et comment je peux aider votre entreprise à atteindre ses objectifs financiers.">
