--- a/services.html
+++ b/services.html
@@ -83,6 +83,7 @@
         <p>Téléphone : <a href="tel:+261 34 18 669 68">+261 34 18 669 68</a></p>
         <p>Facebook : <a href="https://www.facebook.com/@hajatina.randrianantenaina/" target="_blank">Profil Facebook</a></p>
         <p>LinkedIn : <a href="https://www.linkedin.com/in/jean-tsioriniaina-984998340" target="_blank">Profil LinkedIn</a></p>
+        <a href="https://rjeantsioriniaina.github.io/virtuelcomptable/sitemap.xml" class="button">Voir plus</a>
     </footer>
 </body>
 </html>
