--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
         <section>
             <h2>Contactez-Nous</h2>
             <p>Contactez-nous dès aujourd'hui pour découvrir comment nous pouvons simplifier la gestion financière de votre entreprise. <a href="contact.html">Nous contacter</a></p>
+            <a href="https://rjeantsioriniaina.github.io/virtuelcomptable/sitemap.xml" class="button">Voir plus</a>
         </section>
     </main>
     <footer>
