--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 <body>
     <header>
        <img src="images/banner.webp" alt="Bureau de comptabilité moderne avec des graphiques financiers" class="responsive-img" width="800" height="600" itemprop="image"> 
-       <h1>Bienvenue sur Mon Site d'Assistance Virtuelle en Comptabilité</h1>
-        <p>En tant qu'<strong>assistant virtuel en comptabilité</strong>, je vous offre une gamme complète de services comptables et de gestion administrative adaptés à vos besoins spécifiques. Mon objectif est de fournir une expertise fiable et des solutions sur mesure pour simplifier la gestion financière de votre entreprise. Découvrez ci-dessous les services que j'offre et comment je peux vous aider à atteindre vos objectifs financiers.</p>
+       <h1>Assistance Virtuelle en Comptabilité</h1>
+        <p>En tant qu'<strong>assistant virtuel en comptabilité</strong>, je vous offre une gamme complète de services comptables et de gestion administrative adaptés à vos besoins spécifiques. Mon objectif est de fournir une expertise fiable et des solutions sur mesure pour simplifier la gestion financière de votre entreprise.</p>
     
         <nav>
             <a href="services.html">SERVICES</a>
