--- a/services.html
+++ b/services.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Services d'Assistance virtuelle en Comptabilité</title>
+    <title>Services d'assistant virtuel en Comptabilité</title>
     <link rel="stylesheet" href="css/styles.css">
 
     <!-- Meta Description pour SEO -->
-    <meta name="description" content="Découvrez les services comptables par votre Assistante virtuelle : Tenue de livre, rapprochement bancaire, comptabilisation des écritures comptables.">
+    <meta name="description" content="Découvrez les services comptables par votre virtuel assistant : Tenue de livre, rapprochement bancaire, comptabilisation des écritures comptables.">
 
     <!-- Meta Keywords pour SEO -->
     <meta name="keywords" content="assistance virtuelle, tenue de livre, assistante virtuelle, assistant virtuel, rapprochement bancaire, écritures comptables, comptabilisation, expert comptable">
@@ -18,7 +18,7 @@
     <meta name="robots" content="index, follow">
     
     <!-- Meta pour Réseaux Sociaux - Open Graph -->
-    <meta property="og:title" content="Services d'Assistance Virtuelle en Comptabilité">
+    <meta property="og:title" content="Services d'assistant virtuel en Comptabilité">
     <meta property="og:description" content="Découvrez les services comptables offerts par votre assistant virtuel : tenue de livre, rapprochement bancaire, pré-comptabilité, préparation et comptabilisation des écritures comptables, suivis des comptes clients et fournisseurs, paiements.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://rjeantsioriniaina.github.io/virtuelcomptable/services.html">
@@ -33,7 +33,7 @@
 </head>
 <body>
     <header>
-        <h1>Mes Services d'Assistance Virtuelle en Comptabilité</h1>
+        <h1>Mes Services d'assistant virtuel en Comptabilité</h1>
         <nav>
             <a href="index.html">Accueil</a>
             <a href="about.html">À Propos</a>
@@ -43,7 +43,7 @@
     <main>
         <section>
             <img src="images/Assistant-Viruel.webp" alt="Services d'assistance virtuelle en comptabilité" class="responsive-img" width="800" height="600" itemprop="image"> 
-            <h2>Ce Que Je Propose :</h2>
+            <h2>Ce Que Je Propose pour comptable:</h2>
             <ul> 
                 <li><img src="images/bookkeeping-icon.webp" alt="Icône Tenue de livre"> <h3>Tenue de livre</h3> - Une gestion précise et fiable de vos livres comptables, assurant une transparence totale de vos finances.</li>
                 <li><img src="images/bank-reconciliation-icon.webp" alt="Icône Rapprochement bancaire"> <h3>Rapprochement bancaire</h3> - Nous vérifions la concordance entre vos relevés bancaires et vos registres comptables pour éviter toute anomalie.</li> 
